# agldt-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
agldt/: Cargo.toml  README.md
agldt/src/: features.rs  lib.rs  parser.rs  utils.rs
agldt/tests/: tests.rs  tlg0007.tlg004.perseus-grc1.tb.xml
agldt_derive/: Cargo.toml  README.md
agldt_derive/src/: lib.rs
agldt_derive/tests/: 01-parse.rs  02-conflicting-feature-postag.rs  02-conflicting-feature-postag.stderr  03-postag-attribute.rs  04-postagindex-attribute.rs  05-complex-feature-basic-parse.rs  progress.rs
cli/: .env  Cargo.toml
cli/src/: cli.rs  main.rs  tools.rs
