[package]
name = "agldt"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
regex = "1.7.0"
serde = { version = "1.0.147", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_derive = "1.0.147"

[[test]]
name = "tests"
path = "tests/tests.rs"
