[package]
name = "agldt_derive"
autotests = false
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agldt = {path = "../agldt"}
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.103", features = ["extra-traits", "derive"] }
