[package]
name = "agldt-cli"
version = "0.0.1"
edition.workspace = true
description.workspace = true
authors = ["Caio Geraldes <caio.geraldes@usp.br>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agldt = { path = "../agldt/" }
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
dotenv = { version = "0.15.0", features = ["clap"] }
log = "0.4.17"
pretty_env_logger = "0.4"
