[package]
name = "agldt-cli"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agldt = { path = "../agldt/" }
anyhow = "1.0.66"
clap = { version = "3.2.17", features = ["derive"] }
dotenv = { version = "0.15.0", features = ["clap"] }
log = "0.4.17"
pretty_env_logger = "0.4"
unicode-normalization = "0.1.22"
